added Gagarin tutorial links

--- a/README
+++ b/README
@@ -7,3 +7,8 @@ We developed the game using the following languages and frameworks:
 	Javascript
 	Meteor client/server framework
 	Gagarin testing framework
+
+
+Gagarin Tutorials:
+https://hackpad.com/ep/pad/static/RzdMvlwyYHV
+https://github.com/anticoders/gagarin
