Added Jasmine Testing framework. It runs and tests samples only, but I will have actual tests soon.

--- a/README
+++ b/README
@@ -6,9 +6,21 @@ there is time, two player by web.
 We developed the game using the following languages and frameworks:
 	Javascript
 	Meteor client/server framework
-	Gagarin testing framework
+	Gagarin testing framework    - Jasmin and Velocity testing 
 
 
 Gagarin Tutorials:
 https://hackpad.com/ep/pad/static/RzdMvlwyYHV
 https://github.com/anticoders/gagarin
+
+Jasmin Tutorials: 
+
+(actually works with velocity and jasmine so far)
+http://www.mhurwi.com/test-driven-meteor-very-basic-tutorial/
+
+another tutorial just for jasmine (testing only javascript)
+http://code.tutsplus.com/tutorials/testing-your-javascript-with-jasmine--net-21229
+
+example code of jasmine and meteor together:
+https://github.com/meteor-velocity/velocity-examples/blob/master/leaderboard-jasmine/leaderboard.js
+
